# terror-in-the-jungle

./: .gitignore  .msg-campaign-close.txt  AGENTS.md  AI_SYSTEM_ANALYSIS.md  ARCHITECTURE.md  CLAUDE.md  GAME_MODE_REQUIREMENTS.md  GOAL_DIRECTIVE.md  GRENADE_FIXES_SUMMARY.md  LICENSE  LICENSE-ASSETS  LICENSING.md  MATCH_END_SCREEN_TEST.md  NPC_SHADER_EFFECTS.md  README.md  SHOTGUN_VERIFICATION.md  SMG_IMPLEMENTATION_VERIFICATION.md  TASK_VERIFICATION.md  THIRD-PARTY-ASSETS.md  WEAPON_SYSTEM_IMPLEMENTATION_PLAN.md  analyze_loc.py  commit_changes.sh  complete_refactor.py  count_lines.py  eslint.config.js  index.html  package-lock.json  package.json  perf-baselines.json  progress.md  tasks.md  tsconfig.json  tsconfig.scripts.json  vite.config.js  vitest.config.ts
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.mycel/: memory.json
.playwright-mcp/: game-loaded.md
cloudflare/: r2-cors-public-read.json
deploy-3d-assets/: README.md
docs/: ACTIVE_GAME_MODES_HANDOFF.md  AGENT_ORCHESTRATION.md  AGENT_TESTING.md  ARCHITECTURE.md  ARCHITECTURE_RECOVERY.md  ARCHITECTURE_RECOVERY_PLAN.md  ASHAU_VALLEY_IMPLEMENTATION_PLAN.md  ASSET_ACCEPTANCE_STANDARD.md  ASSET_MANIFEST.md  ATMOSPHERE.md  AUDIO_ASSETS_NEEDED.md  A_SHAU_VALLEY_MODE.md  BACKLOG.md  BUILD_NOW_ASSET_BACKLOG.md  CAMPAIGN_2026-05-09.md  CAMPAIGN_2026-05-13-POST-WEBGPU.md  CAMPAIGN_2026-05-19-VISUAL-AND-WAYFINDING.md  CAMPAIGN_2026-05-20-VEHICLE-BOARDING-AND-WATER.md  CARRY_OVERS.md  (+74 more)
rust/tank-ballistic-solver/: Cargo.toml  README.md
rust/tank-ballistic-solver/src/: lib.rs
(+3271 files in other folders)
