[package]
name = "tank-ballistic-solver"
version = "0.1.0"
edition = "2021"
description = "Rust->WASM pilot for the M48 tank ballistic trajectory solver. First Rust pilot crate; deliberately tiny and dependency-light."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Panic=abort drops unwinding tables for a smaller wasm binary; the
# integrator never panics on the happy path and we don't catch panics
# across the JS boundary.
panic = "abort"
